<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Curves</string>
    <string name="action_settings">Settings</string>
    <string name="button_start">Start</string>
    <string name="button_help">Help</string>
    <string name="button_close">Close</string>
    <string name="button_settings">Settings</string>
    <string name="button_back">Back</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_settings">Game</string>
    <string name="switch_sensor">Use sensor to control curve</string>
    <string name="prefs_accelerometer">Calibrate Accelerometer</string>
    <string name="title_activity_calibration">Calibration</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_log">MainLogActivity</string>
    <string name="button_game">Start Game</string>
    <string name="button_chord">Chord</string>
    <string name="text2">Hakunamatata</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="name">Enter the name</string>
    <string name="restart">Restart</string>
</resources>
