<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background"
     >

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_height="200dp"
        android:layout_width="200dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <Button
            android:id="@+id/button_start"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:text="@string/button_start"/>
        <Button
            android:id="@+id/button_settings"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:text="@string/button_settings"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_close"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:text="@string/button_close"
            android:layout_weight="1"/>
    </LinearLayout>
 </RelativeLayout>
